VPCABC.yml
#NV us-east
#Creates 3 VPCs with 3 subnets in each
#Includes Internet Gateway attached to each VPC
#Includes Route Table for each VPC with open route 0.0.0.0/0
#To enable DNS Hostname: VPC > Actions > Edit VPC settings > Select 'Enable DNS hostnames'

Resources:
  #Create 3 x VPCs
  VPCA:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: VPCA

  VPCB:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: VPCB

  VPCC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.2.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: VPCC

  #Create 3 Subnets for each VPC

  #Subnets for VPCA
  VPCANV1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCA
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: VPCANV1a

  VPCANV1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCA
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: VPCANV1b

  VPCANV1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCA
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: us-east-1c
      Tags:
        - Key: Name
          Value: VPCANV1c

  #Subnets for VPC-B
  VPCBNV1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCB
      CidrBlock: 10.1.0.0/24
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: VPCBNV1a

  VPCBNV1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCB
      CidrBlock: 10.1.1.0/24
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: VPCBNV1b

  VPCBNV1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCB
      CidrBlock: 10.1.2.0/24
      AvailabilityZone: us-east-1c
      Tags:
        - Key: Name
          Value: VPCBNV1c

  #Subnets for VPC-C
  VPCCNV1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCC
      CidrBlock: 10.2.0.0/24
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: VPCCNV1a

  VPCCNV1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCC
      CidrBlock: 10.2.1.0/24
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: VPCCNV1b

  VPCCNV1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCC
      CidrBlock: 10.2.2.0/24
      AvailabilityZone: us-east-1c
      Tags:
        - Key: Name
          Value: VPCCNV1c

  #Create Internet Gateway for each VPC
  VPCAIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VPCAIGW

  VPCBIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VPCBIGW

  VPCCIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VPCCIGW

  #Attach Internet Gateways to each coprresponding VPC
  AttachVPCAIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCA
      InternetGatewayId: !Ref VPCAIGW

  AttachVPCBIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCB
      InternetGatewayId: !Ref VPCBIGW

  AttachVPCCIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCC
      InternetGatewayId: !Ref VPCCIGW

  #Create Route Tables
  VPCART:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCA
      Tags:
        - Key: Name
          Value: VPCART

  VPCBRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCB
      Tags:
        - Key: Name
          Value: VPCBRT

  VPCCRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCC
      Tags:
        - Key: Name
          Value: VPCCRT

  #Routes
  RouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPCART
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPCAIGW

  RouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPCBRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPCBIGW

  RouteC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPCCRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPCCIGW

Outputs:
  VPCAID:
    Description: "VPC A ID"
    Value: !Ref VPCA

  VPCBID:
    Description: "VPC B ID"
    Value: !Ref VPCB

  VPCCID:
    Description: "VPC C ID"
    Value: !Ref VPCC
